--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "wojakfarm",
-	"homepage": "https://wojak.farm/",
+	"name": "chad",
+	"homepage": "https://chads.meme/",
 	"version": "0.1.1",
 	"scripts": {
 		"dev": "next dev",
