--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "chad",
-	"homepage": "https://chads.expert/",
+	"homepage": "https://chads.meme/",
 	"version": "0.1.1",
 	"scripts": {
 		"dev": "next dev",
